fix: change error-massages from display:none/block to visibility:hidden/visible to reserve space and evade layout breaks

--- a/css/global.css
+++ b/css/global.css
@@ -97,6 +97,8 @@ h3 {
 .error-message {
     color: red;
     font-size: var(--fs-16);
-    margin-top: 4px;
-    display: none;
+    margin: 0;
+    min-height: 20px;
+    display: block;
+    visibility: hidden;
 }
