--- a/css/login.css
+++ b/css/login.css
@@ -33,7 +33,7 @@ body {
 .sign-up-wrapper {
     position: absolute;
     top: 40px;
-    right: 20px; 
+    right: 20px;
     font-size: var(--fs-16);
     color: var(--clr-700);
     display: flex;
@@ -63,7 +63,7 @@ body {
 .logo {
     position: absolute;
     top: 20px;
-    left: 20px; 
+    left: 20px;
     width: 150px;
     height: 150px;
     object-fit: contain;
@@ -114,14 +114,14 @@ body {
     font-size: 16px;
     font-weight: 400;
     position: relative;
-    margin: 20px 12px 0 12px;
+    margin: 0;
 }
 
 .privacy-checkbox-label {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 16px;
+    margin-top: 0;
     gap: 5px;
 }
 
@@ -248,8 +248,10 @@ footer a:hover {
 .error-message {
     color: red;
     font-size: var(--fs-16);
-    margin-top: 4px;
-    display: none;
+    margin: 0;
+    min-height: 20px;
+    display: block;
+    visibility: hidden;
 }
 
 #privacy-checkbox.input-error {
